menu (2.1.21) unstable; urgency=low

  * The "unreleased" release
  * Add Czech menu messages translation. Thanks Miroslav Kure.
    Closes: #287308.
  * debian/control: uncapitalize synopsis.

 -- Bill Allombert <ballombe@debian.org>  Wed,  5 Jan 2005 10:52:17 +0100

menu (2.1.20) unstable; urgency=low

  * The "deer Rudolf" release
  * Call getpwuid() once and cache the value. This avoid stressing 
    needlessly NIS. Thanks to Steven R. Evatt.
  * Extend the documentation of onlyrunasuser.

 -- Bill Allombert <ballombe@debian.org>  Wed, 15 Dec 2004 00:51:03 +0100

menu (2.1.19) unstable; urgency=low

  * The "Debian translators rule!" release
  * Update Finnish menu section translations, fixing a serious translation
    error noticed by Mika Wahlroos. Closes: #276122.
  * Update Brazillian menu section translation. Thanks André Luís Lopes.
  * Update Russian menu messages translation. Thanks Yuri Kozlov.
    Closes: #268638.
  * Fix Norwegian Nynorsk menu message translation. Thanks Håvard Korsvoll.
  * Update Spanish menu messages translation. Thanks Javier Fernandez-Sanguino
    Peña.
  * Update Chinese menu messages translation. Thanks Carlos Z.F. Liu.
  * Add German menu messages translation. Thanks Tobias Toedter.
  * Add Portuguese menu message and menu section translation. Thanks
    António Amorim.

 -- Bill Allombert <ballombe@debian.org>  Mon,  1 Nov 2004 17:15:40 +0100

menu (2.1.18) unstable; urgency=low

  * The "Sarge is still warm" release 
  * Update Japanese menu message translation. Thanks Goto Masanori.
  * Update Finnish menu message translation. Thanks Tommi Vainikainen.
  * Update Brazillian menu message translation. Thanks André Luís Lopes.
  * Update Dutch menu message translation. Thanks Tim Dijkstra. 
    Closes: #274355.
  * Update Norwegian Nynorsk menu message translation. Thanks Håvard Korsvoll.
  * Add file README.translations to document the way menu sections are
    translated.