@@ -1,0 +1,5 @@
+#! /bin/sh
+
+if test -x /usr/bin/update-menus.real; then
+  exec /usr/bin/update-menus.real "$@"
+fi
